# kernel_uniproton

./: .config  BUILD.gn  Kconfig  LICENSE  Makefile  OAT.xml  README.OpenSource  README.en.md  README.md  README_zh.md  bundle.json  config.xml  uniproton.gni
components/: BUILD.gn
components/fs/: BUILD.gn  fs.gni
components/fs/littlefs/: lfs_adapter.c  lfs_adapter.h
components/fs/porting/: fs.c  fs_adaptation.h  fs_porting.c  prt_fs.h
components/fs/test/: fs_test.c
components/fs/vfs/: vfs_config.h  vfs_files.c  vfs_files.h  vfs_fs.c  vfs_init.c  vfs_maps.c  vfs_maps.h  vfs_mount.c  vfs_mount.h  vfs_operations.h  vfs_partition.c  vfs_partition.h
components/net/: BUILD.gn
components/net/lwip-2.1/: BUILD.gn  lwip_porting.gni
components/net/lwip-2.1/enhancement/src/: fixme.c  lwip_ifaddrs.c
components/net/lwip-2.1/porting/include/: lwipopts.h
components/net/lwip-2.1/porting/include/arch/: cc.h  perf.h  sys_arch.h
components/net/lwip-2.1/porting/include/lwip/: dhcp.h  inet.h  lwipopts.h  netdb.h  netif.h  netifapi.h  sockets.h
components/net/lwip-2.1/porting/src/: driverif.c  netdb_porting.c  sockets_porting.c  sys_arch.c
config/: Kconfig  prt_buildef.h  prt_config.h
config/arch/: Kconfig
config/arch/cpu/: Kconfig
config/arch/cpu/armv7-m/: Kconfig
config/core/: Kconfig
config/core/ipc/: Kconfig
config/core/ipc/event/: Kconfig
config/core/ipc/queue/: Kconfig
config/core/kernel/: Kconfig
config/core/kernel/task/: Kconfig
config/core/kernel/timer/: Kconfig
config/om/: Kconfig
demos/helloworld/apps/helloworld/: main.c  test.h
demos/helloworld/bsp/: rtt_viewer.c  rtt_viewer.h
demos/hi3093/apps/openamp/: main.c  test.h
demos/hi3093/bsp/: cache_asm.h  hwi_init.c  mmu.c  mmu.h  print.c  start.S  timer.c
demos/hi3093/bsp/hi3093/: cpu_config.h
demos/hi3093/bsp/uart/: common.h  serial.c  serial.h  uart.c  uart_core.c  uart_core.h  uart_regs.h
demos/raspi4/apps/openamp/: main.c  test.h
demos/raspi4/bsp/: cache_asm.S  cache_asm.h  hwi_init.c  mmu.c  mmu.h  print.c  timer.c
demos/raspi4/bsp/raspi4/: cpu_config.h
demos/raspi4/include/: .keep
doc/: contribute_guide.md
src/: CMakeLists.txt  Kconfig
src/config/: prt_config.c
src/include/uapi/: prt_mem.h
src/mem/: prt_mem.c  prt_mem_internal.h
src/mem/fsc/: prt_fscmem.c
src/osal/posix/include/: prt_posix_internal.h
testsuites/: BUILD.gn
testsuites/include/: iCunit.h  iCunit.inc  iCunit_config.h  osTest.h
testsuites/kernel/event/: BUILD.gn  It_os_event.c  It_os_event.h  It_os_event_001.c  It_os_event_002.c  It_os_event_003.c
testsuites/kernel/sem/: BUILD.gn  It_os_sem.c  It_os_sem.h  It_os_sem_001.c  It_os_sem_002.c  It_os_sem_003.c  It_os_sem_004.c  It_os_sem_005.c  It_os_sem_006.c  It_os_sem_007.c  It_os_sem_008.c  It_os_sem_009.c
testsuites/kernel/task/: BUILD.gn  It_os_task.c  It_os_task.h  It_os_task_001.c  It_os_task_002.c  It_os_task_003.c  It_os_task_004.c  It_os_task_005.c  It_os_task_006.c  It_os_task_007.c  It_os_task_008.c  It_os_task_010.c  It_os_task_011.c  It_os_task_012.c  It_os_task_013.c  It_os_task_014.c  It_os_task_015.c  It_os_task_016.c  It_os_task_017.c  It_os_task_018.c  It_os_task_019.c  It_os_task_020.c  It_os_task_021.c  It_os_task_022.c  It_os_task_023.c  It_os_task_024.c  It_os_task_025.c  It_os_task_026.c  It_os_task_027.c  It_os_task_028.c  It_os_task_029.c  It_os_task_030.c  It_os_task_031.c  It_os_task_032.c  It_os_task_033.c  It_os_task_034.c  It_os_task_035.c  It_os_task_036.c  It_os_task_037.c  It_os_task_038.c
testsuites/src/: iCunit.c  osTest.c
