# Copyright (c) 2022-2022 Huawei Technologies Co., Ltd. All rights reserved.
#
# UniProton is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan PSL v2.
# You may obtain a copy of Mulan PSL v2 at:
#          http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
# EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
# MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.
# Create: 2022-09-21
# Description: UniProton内核基础测试用例编译脚本。

import("//kernel/uniproton/uniproton.gni")

config("include") {
  defines = []
  include_dirs = [
    "include",
    "//kernel/uniproton/UniProton/src/include/uapi",
    "//kernel/uniproton/UniProton/src/core/kernel/include",
    "//kernel/uniproton/UniProton/src/arch/include",
    "//kernel/uniproton/UniProton/src/om/include",
    "//kernel/uniproton/UniProton/src/mem/include",
    "//kernel/uniproton/UniProton/src/core/ipc/include",
    "//kernel/uniproton/UniProton/src/utility/lib/include",
  ]
}

static_library("test_init") {
  sources = [
    "src/iCunit.c",
    "src/osTest.c",
  ]

  configs += [ ":include" ]
}

group("testsuites") {
  deps = [
    ":test_init",
    "kernel/event:test_event",
    "kernel/sem:test_sem",
    "kernel/task:test_task",
  ]
}
