# Copyright (c) 2022-2022 Huawei Technologies Co., Ltd. All rights reserved.
#
# UniProton is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan PSL v2.
# You may obtain a copy of Mulan PSL v2 at:
#          http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
# EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
# MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.
# Create: 2022-09-21
# Description: UniProton内核基础测试用例编译脚本。

static_library("test_sem") {
  sources = [
    "It_os_sem.c",
    "It_os_sem_001.c",
    "It_os_sem_002.c",
    "It_os_sem_003.c",
    "It_os_sem_004.c",
    "It_os_sem_005.c",
    "It_os_sem_006.c",
    "It_os_sem_007.c",
    "It_os_sem_008.c",
    "It_os_sem_009.c",
  ]

  configs += [ "//kernel/uniproton/testsuites:include" ]
}
