# Copyright (c) 2022-2022 Huawei Device Co., Ltd. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
#    conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
#    of conditions and the following disclaimer in the documentation and/or other materials
#    provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
#    to endorse or promote products derived from this software without specific prior written
#    permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

static_library("test_task") {
  sources = [
    "It_os_task.c",
    "It_os_task_001.c",
    "It_os_task_002.c",
    "It_os_task_003.c",
    "It_os_task_004.c",
    "It_os_task_005.c",
    "It_os_task_006.c",
    "It_os_task_007.c",
    "It_os_task_008.c",
    "It_os_task_010.c",
    "It_os_task_011.c",
    "It_os_task_012.c",
    "It_os_task_013.c",
    "It_os_task_014.c",
    "It_os_task_015.c",
    "It_os_task_016.c",
    "It_os_task_017.c",
    "It_os_task_018.c",
    "It_os_task_019.c",
    "It_os_task_020.c",
    "It_os_task_021.c",
    "It_os_task_022.c",
    "It_os_task_023.c",
    "It_os_task_024.c",
    "It_os_task_025.c",
    "It_os_task_026.c",
    "It_os_task_027.c",
    "It_os_task_028.c",
    "It_os_task_029.c",
    "It_os_task_030.c",
    "It_os_task_031.c",
    "It_os_task_032.c",
    "It_os_task_033.c",
    "It_os_task_034.c",
    "It_os_task_035.c",
    "It_os_task_036.c",
    "It_os_task_037.c",
    "It_os_task_038.c",
  ]

  configs += [ "//kernel/uniproton/testsuites:include" ]
}
