# Copyright (c) 2022-2022 Huawei Technologies Co., Ltd. All rights reserved.
#
# UniProton is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan PSL v2.
# You may obtain a copy of Mulan PSL v2 at:
#          http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
# EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
# MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.
# Create: 2022-09-21
# Description: UniProton内核基础测试用例编译脚本。
static_library("test_task") {
  sources = [
    "It_os_task.c",
    "It_os_task_001.c",
    "It_os_task_002.c",
    "It_os_task_003.c",
    "It_os_task_004.c",
    "It_os_task_005.c",
    "It_os_task_006.c",
    "It_os_task_007.c",
    "It_os_task_008.c",
    "It_os_task_010.c",
    "It_os_task_011.c",
    "It_os_task_012.c",
    "It_os_task_013.c",
    "It_os_task_014.c",
    "It_os_task_015.c",
    "It_os_task_016.c",
    "It_os_task_017.c",
    "It_os_task_018.c",
    "It_os_task_019.c",
    "It_os_task_020.c",
    "It_os_task_021.c",
    "It_os_task_022.c",
    "It_os_task_023.c",
    "It_os_task_024.c",
    "It_os_task_025.c",
    "It_os_task_026.c",
    "It_os_task_027.c",
    "It_os_task_028.c",
    "It_os_task_029.c",
    "It_os_task_030.c",
    "It_os_task_031.c",
    "It_os_task_032.c",
    "It_os_task_033.c",
    "It_os_task_034.c",
    "It_os_task_035.c",
    "It_os_task_036.c",
    "It_os_task_037.c",
    "It_os_task_038.c",
  ]

  configs += [ "//kernel/uniproton/testsuites:include" ]
}
